src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Event</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>The Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Eventbrite_Attendee_IDs__c</fullName>
        <inlineHelpText>One or more Eventbrite attendee ids for this campaign member, separated by semicolons.</inlineHelpText>
        <label>Eventbrite Attendee IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Date_and_Time__c</fullName>
        <inlineHelpText>Date and time of the Eventbrite event for this purchase.</inlineHelpText>
        <label>Eventbrite Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Discount__c</fullName>
        <label>Eventbrite Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Event_ID__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify an event.</inlineHelpText>
        <label>Eventbrite Event ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Order_ID__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify a ticket order.</inlineHelpText>
        <label>Eventbrite Order ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Order_Link__c</fullName>
        <formula>IF(ISNULL(Eventbrite_Order_ID__c), NULL, HYPERLINK(&apos;http://www.eventbrite.com/reports?eid=&apos; &amp; Eventbrite_Event_ID__c &amp; &apos;&amp;filterby=all,&apos; &amp; Eventbrite_Order_ID__c, &apos;View in Eventbrite&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eventbrite Order Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Ticket_Id__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify a ticket.</inlineHelpText>
        <label>Eventbrite Ticket ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Ticket_Quantity__c</fullName>
        <inlineHelpText>Number of tickets registered to this order.</inlineHelpText>
        <label>Eventbrite Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Ticket_Type__c</fullName>
        <inlineHelpText>Type of Eventbrite ticket(s) ordered.</inlineHelpText>
        <label>Eventbrite Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>The Process</businessProcess>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Registration</fullName>
        <active>true</active>
        <businessProcess>Event</businessProcess>
        <label>Event Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sale</fullName>
        <active>true</active>
        <businessProcess>The Process</businessProcess>
        <label>Sale</label>
    </recordTypes>
</CustomObject>